# cpp-openGL

./: CMakeLists.txt
src/: Main.cpp
src/Shader/: Shader.cpp  Shader.h
src/Window/: Window.cpp  Window.h
